--- a/package.json
+++ b/package.json
@@ -6,19 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --fix",
+    "prepare": "husky install",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "turnstone": "^2.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@iconify/icons-bi": "^1.2.10",
+    "@iconify/icons-carbon": "^1.2.9",
+    "@iconify/icons-ep": "^1.2.8",
+    "@iconify/icons-game-icons": "^1.2.0",
+    "@iconify/icons-ic": "^1.2.10",
+    "@iconify/icons-tabler": "^1.2.38",
+    "@iconify/react": "^4.0.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.24.0",
+    "eslint-config-next": "^12.3.1",
+    "husky": "^8.0.1",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
 }
