--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "headers": [
     {
       "source": "/(.*)",
-      "headers": [{ "key": "Access-Control-Allow-Origin", "value": "*" }]
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-UserSession" }
+      ]
     }
   ]
 }
